--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,69 +1,73 @@
 // FONTS START
-@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital@1&family=Poppins&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:ital@1&family=Poppins&display=swap");
 // FONTS END
 
 * {
   padding: 0%;
   margin: 0%;
   box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 
 // VARIABLES START
 $themeColor: #dc1414;
 
 @mixin Bg {
-  background: linear-gradient(22deg, rgba(220,20,20,1) 27%, rgba(255,45,45,0.9976365546218487) 52%);
+  background: linear-gradient(
+    22deg,
+    rgba(220, 20, 20, 1) 27%,
+    rgba(255, 45, 45, 0.9976365546218487) 52%
+  );
 }
 // VARIABLES END
 
 // GLOBAL CLASSES START
 html {
-	width: 100%;
-	font-size: 100%;
+  width: 100%;
+  font-size: 100%;
 }
 @media screen and (max-width: 992px) {
-	html {
-		font-size: 99%;
-	}
+  html {
+    font-size: 99%;
+  }
 }
 @media screen and (max-width: 668px) {
-	html {
-		font-size: 98%;
-	}
+  html {
+    font-size: 98%;
+  }
 }
 @media screen and (max-width: 575px) {
-	html {
-		font-size: 97%;
-	}
+  html {
+    font-size: 97%;
+  }
 }
 @media screen and (max-width: 475px) {
-	html {
-		font-size: 96%;
-	}
+  html {
+    font-size: 96%;
+  }
 }
 @media screen and (max-width: 380px) {
-	html {
-		font-size: 95%;	
-}
+  html {
+    font-size: 95%;
+  }
 }
 @media screen and (max-width: 280px) {
-	html {
-		font-size: 94%;
-	}
+  html {
+    font-size: 94%;
+  }
 }
 
 ::-webkit-scrollbar {
-	width: 3px;
-	height: 3px;
+  width: 3px;
+  height: 3px;
 }
 ::-webkit-scrollbar-track {
   @include Bg;
   border-radius: 12px;
 }
 ::-webkit-scrollbar-track-piece {
-	background-color: #ccc;
+  background-color: #ccc;
   border-radius: 12px;
 }
 ::-webkit-scrollbar-thumb {
@@ -71,11 +75,11 @@ html {
   border-radius: 12px;
 }
 ::-webkit-scrollbar-corner {
-	background-color: #ccc;
+  background-color: #ccc;
   border-radius: 12px;
 }
 ::-webkit-resizer {
-	background-color: #ccc;
+  background-color: #ccc;
   border-radius: 12px;
 }
 
@@ -84,8 +88,8 @@ html {
 }
 
 .line {
-    width: 2px;
-    background: #ffff;
+  width: 2px;
+  background: #ffff;
 }
 
 .themeColor {
@@ -93,9 +97,9 @@ html {
 }
 
 .page_container {
-	max-width: 1075px;
-	margin-left: auto;
-	margin-right: auto;
+  max-width: 1075px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .themeBtn {
@@ -103,7 +107,11 @@ html {
   transition: 0.8s;
 
   &:hover {
-    background: linear-gradient(22deg, rgba(220,20,20,0.9) 27%, rgba(255,45,45,0.9) 52%);
+    background: linear-gradient(
+      22deg,
+      rgba(220, 20, 20, 0.9) 27%,
+      rgba(255, 45, 45, 0.9) 52%
+    );
   }
 }
 
@@ -114,7 +122,7 @@ input {
   }
 }
 
-.newsImg{
+.newsImg {
   border: 2px solid #000;
   border-radius: 4px;
 }
@@ -137,105 +145,103 @@ input {
   .logoContainer {
     h2 {
       letter-spacing: 1px;
-    }    
+    }
     img {
-        height: 25px;
+      height: 25px;
       width: 48px;
     }
   }
 
-	h5 {
-		font-weight: 700;
-		letter-spacing: 1.1px;
-		font-size: 1.5rem;
-	}
+  h5 {
+    font-weight: 700;
+    letter-spacing: 1.1px;
+    font-size: 1.5rem;
+  }
 
-	ul {
-		li {
-			margin: 0rem 0.8rem;
-			position: relative;
-			font-weight: 500;
+  ul {
+    li {
+      margin: 0rem 0.8rem;
+      position: relative;
+      font-weight: 500;
 
-			a {
-				color: #fff;
-			}
+      a {
+        color: #fff;
+      }
 
-			.themeText {
-				color: $themeColor;
-			}
+      .themeText {
+        color: $themeColor;
+      }
 
-			&::before {
-				content: "";
-				background: #000;
-				position: absolute;
-				z-index: -1;
-				height: 0%;
-				width: 100%;
-				bottom: 0%;
-				left: 0%;
-			}
+      &::before {
+        content: "";
+        background: #000;
+        position: absolute;
+        z-index: -1;
+        height: 0%;
+        width: 100%;
+        bottom: 0%;
+        left: 0%;
+      }
 
-			&:hover::before {
-				height: 10%;
-			}
-		}
-	}
-	.icons {
-		li:last-child {
-			margin-right: 0rem;
-		}
-	}
+      &:hover::before {
+        height: 10%;
+      }
+    }
+  }
+  .icons {
+    li:last-child {
+      margin-right: 0rem;
+    }
+  }
 
-	li.activeNav::before {
-		content: "";
-		background: #000;
-		position: absolute;
-		z-index: -1;
-		height: 10%;
-		width: 100%;
-		bottom: 0%;
-		left: 0%;
-	}
+  li.activeNav::before {
+    content: "";
+    background: #000;
+    position: absolute;
+    z-index: -1;
+    height: 10%;
+    width: 100%;
+    bottom: 0%;
+    left: 0%;
+  }
 }
 @media screen and (max-width: 575px) {
-	.header_container {
-		padding: 1.4rem 0rem 1rem 0rem;
-	
-  .logoContainer {
-    h2 {
-      font-size: 1.1rem;
-    }
-    img {
-      height: 20px;
-      width: 40px;
+  .header_container {
+    padding: 1.4rem 0rem 1rem 0rem;
+
+    .logoContainer {
+      h2 {
+        font-size: 1.1rem;
+      }
+      img {
+        height: 20px;
+        width: 40px;
+      }
     }
   }
-  }
-  
 }
 // HEADER CONTAINER END
 
-
 // SIDEBAR CONTAINER START
 .sideBar {
-	position: fixed;
-	top: 50%;
-	left: 50%;
-	right: 0%;
-	bottom: 0%;
-	transform: translate(-50%, -50%);
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  right: 0%;
+  bottom: 0%;
+  transform: translate(-50%, -50%);
   z-index: 99999;
-	display: none;
-	opacity: 0;
-	transition: 2s;
+  display: none;
+  opacity: 0;
+  transition: 2s;
   @include Bg;
 
-    .logoContainer {
+  .logoContainer {
     h2 {
       letter-spacing: 1px;
-    }    
+    }
     img {
-        height: 25px;
+      height: 25px;
       width: 48px;
     }
   }
@@ -243,7 +249,7 @@ input {
 // SIDEBAR CONTAINER END
 
 // SEARCH BAR START
-.searchBar{
+.searchBar {
   height: 50px;
 }
 // SEARCH BAR END
@@ -257,11 +263,10 @@ input {
 }
 
 .innerCont {
-  max-width: 600px;
+  //   max-width: 600px;
   width: 100%;
   border-radius: 8px;
   width: 100%;
   background: #fff;
 }
 // HOME END
-
