--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -92,10 +92,93 @@ html {
   color: #dc1414;
 }
 
+.themeBg {
+  background: #dc1414;
+}
+
 .page_container {
   max-width: 1075px;
   margin-left: auto;
   margin-right: auto;
+}
+
+.dot {
+  height: 7px;
+  width: 7px;
+  border-radius: 50%;
+  background: linear-gradient(22deg, #dc1414 27%, rgba(255, 45, 45, 0.997637) 52%);
+}
+
+.tab {
+  background: #dedede;
+}
+
+#content-1, #content-2 {
+  height: 500px;
+  overflow-y: scroll;
+}
+
+#content-1 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+#content-2 {
+  display: none;
+}
+
+.rightSideA {
+  height: 350px;
+  overflow-y: scroll;
+}
+
+.bannerContainer {
+  -webkit-transition: 0.8s all;
+  transition: 0.8s all;
+}
+
+.hoveredBanned {
+  -webkit-transition: 0.8s all;
+  transition: 0.8s all;
+  background: linear-gradient(22deg, #dc1414 27%, rgba(255, 45, 45, 0.997637) 52%);
+  color: #fff;
+  border-radius: 4px;
+  font-size: 1rem;
+  left: 10%;
+  top: 0%;
+  z-index: 999;
+  display: none;
+  opacity: 0;
+  height: 0px;
+  width: 0px;
+  overflow: hidden;
+}
+
+.bannerContainer:hover .hoveredBanned {
+  -webkit-transition: 0.8s all;
+  transition: 0.8s all;
+  display: block;
+  opacity: 1;
+  width: 150px;
+  height: 128px;
+}
+
+.tab .active {
+  position: relative;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+
+.tab .active:before {
+  content: "";
+  position: absolute;
+  height: 8%;
+  width: 100%;
+  left: 0%;
+  bottom: 0%;
+  right: 0%;
+  background-color: #dc1414;
 }
 
 .themeBtn {
@@ -247,5 +330,18 @@ input:focus {
   border-radius: 8px;
   width: 100%;
   background: #fff;
+}
+
+.accountBanner {
+  height: 120px;
+}
+
+.accountBanner img {
+  height: 80px;
+  width: 80px;
+  bottom: -30%;
+  left: 5%;
+  border-radius: 50%;
+  border: 3px solid #dc1414;
 }
 /*# sourceMappingURL=style.css.map */
