--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -136,6 +136,21 @@ html {
   display: none;
 }
 
+@media screen and (max-width: 768px) {
+  #content-1, #content-2 {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+
 .rightSideA {
   height: 350px;
   overflow-y: scroll;
@@ -373,5 +388,10 @@ input:focus {
     border-radius: 50%;
     border: 3px solid #dc1414;
   }
+}
+
+.accBox {
+  height: 70px;
+  width: 70px;
 }
 /*# sourceMappingURL=style.css.map */
