--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -102,6 +102,24 @@ html {
   margin-right: auto;
 }
 
+.grayBg {
+  background: #666666 !important;
+}
+
+.purpleBg {
+  background: #641d77 !important;
+}
+
+.contRotate {
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
+}
+
+.eachRotate {
+  -webkit-transform: rotate(-44deg);
+          transform: rotate(-44deg);
+}
+
 .dot {
   height: 7px;
   width: 7px;
@@ -121,7 +139,8 @@ html {
   max-height: 150px;
 }
 
-#content-1, #content-2 {
+#content-1,
+#content-2 {
   height: 500px;
   overflow-y: scroll;
 }
@@ -137,7 +156,8 @@ html {
 }
 
 @media screen and (max-width: 768px) {
-  #content-1, #content-2 {
+  #content-1,
+  #content-2 {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
